--- a/mqtt-client-ws/src/wasmJsMain/resources/index.html
+++ b/mqtt-client-ws/src/wasmJsMain/resources/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
     <title>Ktor-MQTT Example</title>
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
 </head>
 <body>
 <script type="module" src="Ktor-MQTT-mqtt-client-ws.mjs"></script>
