Fixed wrong js filename in index.html

--- a/mqtt-client-ws/src/wasmJsMain/resources/index.html
+++ b/mqtt-client-ws/src/wasmJsMain/resources/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
 </head>
 <body>
-<script type="module" src="Ktor-MQTT-mqtt-client-ws.mjs"></script>
+<script src="mqtt-client-ws.js"></script>
 <div></div>
 </body>
