--- a/mqtt-client-ws/src/wasmJsMain/resources/index.html
+++ b/mqtt-client-ws/src/wasmJsMain/resources/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
 <script src="mqtt-client-ws.js"></script>
+<h3>Ktor-MQTT Wasm Test Page</h3>
+<div>
+    This page uses Wasm to create a direct connection from this page to an MQTT broker via secure websocket. It
+    connects to test.mosquitto.org, subscribes to all available topics and prints some summary data.
+</div>
+<p>
+    Please make sure that your runtime environment supports the latest version of Wasm GC and Exception-Handling
+    proposals.
+</p>
 <div></div>
 </body>
